控制球，时间选择器

--- a/panel/build.gradle
+++ b/panel/build.gradle
@@ -32,4 +32,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     api 'com.github.sdfdzx:SupperShape:v1.0.2'
+    api 'org.greenrobot:eventbus:3.1.1'
+    api 'com.appeaser.sublimepickerlibrary:sublimepickerlibrary:2.1.2'
 }
