--- a/panel/build.gradle
+++ b/panel/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     api 'com.github.sdfdzx:SupperShape:v1.0.2'
     api 'org.greenrobot:eventbus:3.1.1'
     api 'com.appeaser.sublimepickerlibrary:sublimepickerlibrary:2.1.2'
+    api 'com.github.douglasjunior:android-simple-tooltip:0.2.2'
 }
