--- a/hook/build.gradle
+++ b/hook/build.gradle
@@ -27,12 +27,11 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'com.android.support:appcompat-v7:28.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    api 'com.github.sdfdzx:SupperShape:v1.0.2'
     api 'org.greenrobot:eventbus:3.1.1'
-    api 'com.appeaser.sublimepickerlibrary:sublimepickerlibrary:2.1.2'
+    //api 'com.appeaser.sublimepickerlibrary:sublimepickerlibrary:2.1.2'
     api 'com.github.douglasjunior:android-simple-tooltip:0.2.2'
+    api project(':DangDangCoreLib')
 }
