--- a/hook/build.gradle
+++ b/hook/build.gradle
@@ -31,7 +31,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     api 'org.greenrobot:eventbus:3.1.1'
-    //api 'com.appeaser.sublimepickerlibrary:sublimepickerlibrary:2.1.2'
     api 'com.github.douglasjunior:android-simple-tooltip:0.2.2'
     api project(':DangDangCoreLib')
+    api 'com.github.PhilJay:MPAndroidChart:v3.1.0-alpha'
 }
